[gd_scene load_steps=12 format=3 uid="uid://c7yf0q2ibq4ol"]

[ext_resource type="Texture2D" uid="uid://cj07r54tjqymx" path="res://assets/Crabknight.png" id="1_dy6sc"]
[ext_resource type="Script" uid="uid://b6vycsyujiyj3" path="res://mob.gd" id="1_nokgg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dy6sc"]
size = Vector2(45, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_nokgg"]
atlas = ExtResource("1_dy6sc")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubaqv"]
atlas = ExtResource("1_dy6sc")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p11y5"]
atlas = ExtResource("1_dy6sc")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5nov"]
atlas = ExtResource("1_dy6sc")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3mxk"]
atlas = ExtResource("1_dy6sc")
region = Rect2(128, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_1qmh0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nokgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubaqv")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p11y5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5nov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3mxk")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dy6sc"]
bg_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nokgg"]
bg_color = Color(1, 0, 0, 1)

[node name="Node2D" type="Node2D"]
metadata/_edit_group_ = true

[node name="Mob" type="RigidBody2D" parent="." groups=["hurtbox"]]
gravity_scale = 0.0
script = ExtResource("1_nokgg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mob"]
position = Vector2(-1.5, -13)
shape = SubResource("RectangleShape2D_dy6sc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Mob"]
sprite_frames = SubResource("SpriteFrames_1qmh0")
animation = &"move"
frame_progress = 0.469297

[node name="HealthBar" type="ProgressBar" parent="Mob"]
offset_left = -20.0
offset_top = -47.0
offset_right = 20.0
offset_bottom = -43.0
theme_override_styles/background = SubResource("StyleBoxFlat_dy6sc")
theme_override_styles/fill = SubResource("StyleBoxFlat_nokgg")
value = 100.0
show_percentage = false

[connection signal="health_changed" from="Mob" to="Mob" method="_on_health_changed"]
